--- a/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.csproj
+++ b/BolgerUtils.EnumDisplay/BolgerUtils.EnumDisplay.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;net8.0;net9.0</TargetFrameworks>
     <Authors>Matthew Bolger</Authors>
     <Description>See https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.EnumDisplay
 
@@ -17,7 +17,7 @@ https://svg-clipart.com/sign/RsnsoX2-man-carrying-a-big-bag-of-money-clipart
     <PackageTags>enum</PackageTags>
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl />
-    <Version>3.0.0.8</Version>
+    <Version>4.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
