--- a/Tests/Tests.BolgerUtils.EnumDisplay/Tests.BolgerUtils.EnumDisplay.csproj
+++ b/Tests/Tests.BolgerUtils.EnumDisplay/Tests.BolgerUtils.EnumDisplay.csproj
@@ -4,7 +4,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BolgerUtils" Version="3.0.0.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
@@ -15,5 +14,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\BolgerUtils.EnumDisplay\BolgerUtils.EnumDisplay.csproj" />
+    <ProjectReference Include="..\..\BolgerUtils\BolgerUtils.csproj" />
   </ItemGroup>
 </Project>
