--- a/Tests/Tests.BolgerUtils.FileToObjectMapping/Tests.BolgerUtils.FileToObjectMapping.csproj
+++ b/Tests/Tests.BolgerUtils.FileToObjectMapping/Tests.BolgerUtils.FileToObjectMapping.csproj
@@ -4,7 +4,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BolgerUtils" Version="3.0.0.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="xunit" Version="2.9.2" />
@@ -16,5 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\BolgerUtils.FileToObjectMapping\BolgerUtils.FileToObjectMapping.csproj" />
+    <ProjectReference Include="..\..\BolgerUtils\BolgerUtils.csproj" />
   </ItemGroup>
 </Project>
