--- a/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
+++ b/BolgerUtils.TimeZoneConverter/BolgerUtils.TimeZoneConverter.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net8.0;net9.0;net10.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net8.0;net10.0</TargetFrameworks>
     <Authors>Matthew Bolger</Authors>
     <Description>See https://github.com/xan1000/BolgerUtils/tree/master/BolgerUtils.TimeZoneConverter
 
@@ -18,6 +18,7 @@ https://svg-clipart.com/sign/RsnsoX2-man-carrying-a-big-bag-of-money-clipart
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl />
     <Version>4.1.0.0</Version>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
