--- a/Console/Console.BolgerUtils/Console.BolgerUtils.csproj
+++ b/Console/Console.BolgerUtils/Console.BolgerUtils.csproj
@@ -3,6 +3,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <RootNamespace>Console.BolgerUtils</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
