--- a/Console/Console.BolgerUtils.EnumDisplayAndFileToObjectMapping/Console.BolgerUtils.EnumDisplayAndFileToObjectMapping.csproj
+++ b/Console/Console.BolgerUtils.EnumDisplayAndFileToObjectMapping/Console.BolgerUtils.EnumDisplayAndFileToObjectMapping.csproj
@@ -3,6 +3,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
