--- a/Console/Console.BolgerUtils/Console.BolgerUtils.csproj
+++ b/Console/Console.BolgerUtils/Console.BolgerUtils.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <RootNamespace>Console.BolgerUtils</RootNamespace>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
